<resources>
    <string name="app_name">Wedding Planner</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="wedding">Wedding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="text_on">Plan your wedding in our application. Add items, plan your budget and get inspired by ideas</string>
    <string name="text_data">Enter your names and wedding date</string>
    <string name="name_amp_name"><![CDATA[Name & Name]]></string>
    <string name="date">Date</string>
    <string name="budget">$ Budget</string>
    <string name="day_month_year">Day Month Year</string>
    <string name="ready_for_the_wedding">Ready for the wedding</string>
    <string name="things_to_do">Things to Do</string>
    <string name="budget_amp_expenses"><![CDATA[Budget & Expenses]]></string>
    <string name="text_dialog_todo">Enter the text what you need to do…</string>
    <string name="done">Done</string>
    <string name="things_to_d">Things to Do...</string>
    <string name="wedding_image">Wedding image</string>
    <string name="wedding_dress_amp_room_suit"><![CDATA[Wedding Dress & Room Suit]]></string>
    <string name="wedding_cake">Wedding Cake</string>
    <string name="wedding_home">Wedding Home</string>
</resources>