<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.DataFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fon_data"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_data"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/color2"
            android:fontFamily="@font/sf_pro_text_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_enter_name"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:hint="@string/name_amp_name"
            android:layout_marginTop="30dp"
            android:textColor="@color/color2"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="14sp"
            android:paddingStart="15dp"
            android:textColorHint="@color/color3"
            android:background="@drawable/bg_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_enter_date"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/bg_content"
            android:fontFamily="@font/sf_pro_text_regular"
            android:hint="@string/day_month_year"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColor="@color/color2"
            android:textColorHint="@color/color3"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_name"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et_enter_budget"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/bg_content"
            android:fontFamily="@font/sf_pro_text_regular"
            android:hint="@string/budget"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColor="@color/color2"
            android:textColorHint="@color/color3"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_date"
            tools:ignore="TextFields" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bt_bt_next"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_bt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_budget">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_bold"
                android:includeFontPadding="false"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>