<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="386dp"
    android:layout_height="272dp"
    android:layout_gravity="center"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp"
    android:padding="20dp"
    android:background="@drawable/bg_dialog">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#FFF2F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text_medium"
        android:text="@string/text_dialog_todo"
        android:textColor="@color/color2"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_close" />

    <EditText
        android:id="@+id/et_enter_todo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_content"
        android:fontFamily="@font/sf_pro_text_regular"
        android:hint="@string/things_to_d"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="@color/color2"
        android:textColorHint="@color/color3"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_bt_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextFields" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bt_bt_done"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:includeFontPadding="false"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>